--- a/Argocd/chatapp/argocd-app.yaml
+++ b/Argocd/chatapp/argocd-app.yaml
@@ -6,6 +6,8 @@ metadata:
   annotations:
     argocd-image-updater.argoproj.io/image-list: chatapp-image=kyczak/chatapp
     argocd-image-updater.argoproj.io/chatapp-image.update-strategy: latest
+    argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
+    argocd-image-updater.argoproj.io/git-branch: master
 spec:
   project: default
   source:
