--- a/Argocd/chatapp/argocd-app.yaml
+++ b/Argocd/chatapp/argocd-app.yaml
@@ -4,8 +4,8 @@ metadata:
   name: chatapp
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: chatapp-image=kyczak/chatapp
-    argocd-image-updater.argoproj.io/chatapp-image.update-strategy: latest
+    argocd-image-updater.argoproj.io/image-list: kyczak/chatapp
+    argocd-image-updater.argoproj.io/chatapp.update-strategy: latest
     argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
     argocd-image-updater.argoproj.io/git-branch: master
 spec:
@@ -13,7 +13,11 @@ spec:
   source:
     repoURL: https://github.com/Fahras23/Devops-lab.git
     targetRevision: HEAD
-    path: Apps/chatapp
+    path: Apps/base/chatapp
   destination:
     server: https://kubernetes.default.svc
     namespace: chatapp
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
