--- a/Argocd/chatapp/argocd-app.yaml
+++ b/Argocd/chatapp/argocd-app.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     argocd-image-updater.argoproj.io/image-list: kyczak/chatapp
     argocd-image-updater.argoproj.io/chatapp.update-strategy: latest
+    argocd-image-updater.argoproj.io/alias.force-update: "true"
     argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
     argocd-image-updater.argoproj.io/git-branch: master
 spec:
