--- a/Argocd/chatapp/argocd-app.yaml
+++ b/Argocd/chatapp/argocd-app.yaml
@@ -4,9 +4,9 @@ metadata:
   name: chatapp
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: kyczak/chatapp
-    argocd-image-updater.argoproj.io/chatapp.update-strategy: latest
-    argocd-image-updater.argoproj.io/alias.force-update: "true"
+    argocd-image-updater.argoproj.io/image-list: chatapp-image=kyczak/chatapp
+    argocd-image-updater.argoproj.io/chatapp-image.update-strategy: latest
+    argocd-image-updater.argoproj.io/chatapp-image.force-update: "true"
     argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
     argocd-image-updater.argoproj.io/git-branch: master
 spec:
