--- a/Apps/base/chatapp/chatapp-deployment.yaml
+++ b/Apps/base/chatapp/chatapp-deployment.yaml
@@ -15,6 +15,7 @@ spec:
         app: chat
     spec:
       containers:
+        - name: chatapp-container 
         - image: kyczak/chatapp:latest
           envFrom:
           - configMapRef:
