--- a/Apps/base/chatapp/chatapp-deployment.yaml
+++ b/Apps/base/chatapp/chatapp-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: chat
     spec:
       containers:
-        - name: chatapp-container 
+        - name: chatapp
         - image: kyczak/chatapp:latest
           envFrom:
           - configMapRef:
