--- a/Apps/base/chatapp/chatapp-deployment.yaml
+++ b/Apps/base/chatapp/chatapp-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: chatapp
-        - image: kyczak/chatapp:latest
+          image: kyczak/chatapp:latest
           envFrom:
           - configMapRef:
               name: chatapp-config
