--- a/Apps/base/chatapp/chatapp-deployment.yaml
+++ b/Apps/base/chatapp/chatapp-deployment.yaml
@@ -26,3 +26,7 @@ spec:
           resources:
             requests: 
               cpu: "100m"
+              memory: "100Mi"
+            limits:
+              cpu: "200m"
+              memory: "150Mi"
