--- a/Apps/base/chatapp/kustomization.yaml
+++ b/Apps/base/chatapp/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
   - chatapp-deployment.yaml
   - chatapp-hpa.yaml
   - chatapp-svc.yaml
+  - chatapp-pvc
   - redis-deployment.yaml
   - redis-svc.yaml
