--- a/Apps/base/chatapp/chatapp-deployment.yaml
+++ b/Apps/base/chatapp/chatapp-deployment.yaml
@@ -30,7 +30,7 @@ spec:
             limits:
               cpu: "200m"
               memory: "150Mi"
-      volumes:
-        - name: chatapp-cache
-          persistentVolumeClaim:
-            claimName: chatapp-pvc
+      # volumes:
+      #   - name: chatapp-cache
+      #     persistentVolumeClaim:
+      #       claimName: chatapp-pvc
