--- a/Apps/chatapp/overlays/beta/kustomization.yaml
+++ b/Apps/chatapp/overlays/beta/kustomization.yaml
@@ -1,12 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: prod
+namespace: beta
 
 resources:
   - ../../base
   - namespace.yaml
+  
 patches:
   - path: deployment-patch.yaml
 
-namePrefix: prod-
+namePrefix: beta-
