--- a/Apps/chatapp/overlays/beta/deployment-patch.yaml
+++ b/Apps/chatapp/overlays/beta/deployment-patch.yaml
@@ -8,4 +8,4 @@ spec:
     spec:
       containers:
         - name: chatapp
-          image: kyczak/chatapp:latest
+          image: kyczak/chatapp:beta
