--- a/Apps/chatapp/base/pg-cluster.yaml
+++ b/Apps/chatapp/base/pg-cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: silly-demo
+  name: pg-cluster
 spec:
   instances: 3
   primaryUpdateStrategy: unsupervised
