--- a/Apps/chatapp/overlays/beta/deployment-patch.yaml
+++ b/Apps/chatapp/overlays/beta/deployment-patch.yaml
@@ -9,3 +9,29 @@ spec:
       containers:
         - name: chatapp
           image: kyczak/chatapp:beta
+      env:
+      - name: DB_NAME
+        valueFrom:
+          secretKeyRef:
+            name: prod-pg-cluster-app
+            key: dbname
+      - name: DB_USER
+        valueFrom:
+          secretKeyRef:
+            name: prod-pg-cluster-app
+            key: username
+      - name: DB_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            name: prod-pg-cluster-app
+            key: password
+      - name: DB_HOST
+        valueFrom:
+          secretKeyRef:
+            name: prod-pg-cluster-app
+            key: host
+      - name: DB_PORT
+        valueFrom:
+          secretKeyRef:
+            name: prod-pg-cluster-app
+            key: port
