--- a/Apps/chatapp/overlays/beta/kustomization.yaml
+++ b/Apps/chatapp/overlays/beta/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: beta
 resources:
   - ../../base
   - namespace.yaml
-  
+  - pg-cluster.yaml
 patches:
   - path: deployment-patch.yaml
 
