--- a/Apps/chatapp/overlays/beta/deployment-patch.yaml
+++ b/Apps/chatapp/overlays/beta/deployment-patch.yaml
@@ -13,25 +13,25 @@ spec:
       - name: DB_NAME
         valueFrom:
           secretKeyRef:
-            name: prod-pg-cluster-app
+            name: beta-pg-cluster-app
             key: dbname
       - name: DB_USER
         valueFrom:
           secretKeyRef:
-            name: prod-pg-cluster-app
+            name: beta-pg-cluster-app
             key: username
       - name: DB_PASSWORD
         valueFrom:
           secretKeyRef:
-            name: prod-pg-cluster-app
+            name: beta-pg-cluster-app
             key: password
       - name: DB_HOST
         valueFrom:
           secretKeyRef:
-            name: prod-pg-cluster-app
+            name: beta-pg-cluster-app
             key: host
       - name: DB_PORT
         valueFrom:
           secretKeyRef:
-            name: prod-pg-cluster-app
+            name: beta-pg-cluster-app
             key: port
