--- a/Apps/chatapp/overlays/beta/deployment-patch.yaml
+++ b/Apps/chatapp/overlays/beta/deployment-patch.yaml
@@ -9,6 +9,7 @@ spec:
       containers:
         - name: chatapp
           image: kyczak/chatapp:beta
+          command: ["python", "manage.py", "migrate"]
           env:
           - name: DB_NAME
             valueFrom:
@@ -35,3 +36,10 @@ spec:
               secretKeyRef:
                 name: beta-pg-cluster-app
                 key: port
+      initContainers:
+        - name: myapp-migrations
+          image: myapp:latest
+          command: ["/bin/sh"]
+          args:
+            - "-c"
+            - python manage.py migrate
