update iamge for init container

--- a/Apps/chatapp/overlays/beta/deployment-patch.yaml
+++ b/Apps/chatapp/overlays/beta/deployment-patch.yaml
@@ -38,7 +38,7 @@ spec:
                 key: port
       initContainers:
         - name: chatapp-migrations
-          image: chatapp:beta
+          image: kyczak/chatapp:beta
           command: ["/bin/sh"]
           args:
             - "-c"
