--- a/Apps/chatapp/overlays/beta/kustomization.yaml
+++ b/Apps/chatapp/overlays/beta/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ../../base
   - namespace.yaml
   - pg-cluster.yaml
+  - migration-job.yaml
 patches:
   - path: deployment-patch.yaml
 
