change number of replicas to 0

--- a/Apps/chatapp/base/chatapp-deployment.yaml
+++ b/Apps/chatapp/base/chatapp-deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: chatapp
           image: kyczak/chatapp:latest
+          revisionHistoryLimit: 0
           envFrom:
           - configMapRef:
               name: chatapp-config
