--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ override.tf.json
 # Ignore CLI configuration files
 .terraform.rc
 terraform.rc
+
+**/.argocd-source-chatapp-beta.yaml
+**/.argocd-source-chatapp-prod.yaml
