--- a/Argocd/chatapp/argocd-app-beta.yaml
+++ b/Argocd/chatapp/argocd-app-beta.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: argocd
   annotations:
     argocd-image-updater.argoproj.io/image-list: chatapp-image=kyczak/chatapp:beta
+    argocd-image-updater.argoproj.io/chatapp-image.update-strategy: digest #update to latest image with declared tag
     argocd-image-updater.argoproj.io/chatapp-image.force-update: "true"
     argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
     argocd-image-updater.argoproj.io/git-branch: master
