--- a/Argocd/monitoring/argocd-app-monitoring.yaml
+++ b/Argocd/monitoring/argocd-app-monitoring.yaml
@@ -16,3 +16,9 @@ spec:
     automated:
       prune: true
       selfHeal: true
+data:
+  configManagementPlugins: |
+    - name: kustomize-build-with-helm
+      generate:
+        command: [ "sh", "-c" ]
+        args: [ "kustomize build --enable-helm" ]
