change number of nodes in cluster

--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -12,7 +12,7 @@ on:
           - destroy
   pull_request:
     paths:
-      - Azura_Infra/**
+      - Azure_Infra/**
   push:
     branches:
       - "master"
