add logs bucket

--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -36,6 +36,7 @@ jobs:
       matrix:
         directory:
           - Azure_Infra/aks_cluster
+          - Azure_Infra/monitoring
     steps:
       
       - name: Checkout code
