--- a/Apps/chatapp/overlays/beta/kustomization.yaml
+++ b/Apps/chatapp/overlays/beta/kustomization.yaml
@@ -8,6 +8,8 @@ resources:
   - namespace.yaml
   - pg-cluster.yaml
   - migration-job.yaml
+  - alloy-deployment.yaml
+  - alloy-configmap.yaml
 patches:
   - path: deployment-patch.yaml
 
