--- a/Apps/monitoring/alloy-deployment.yaml
+++ b/Apps/monitoring/alloy-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         image: grafana/alloy:latest
         volumeMounts:
         - name: config
-          mountPath: /etc/alloy/config.alloy
+          mountPath: /etc/alloy
       volumes:
       - name: config
         configMap:
