--- a/Apps/monitoring/kustomization.yaml
+++ b/Apps/monitoring/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- grafana-configmap.yaml
-- namespace.yaml
+  - grafana-configmap.yaml
+  - namespace.yaml
+  - alloy-deployment.yaml
+  - alloy-configmap.yaml
