change to maintenance mode

--- a/Apps/chatapp/overlays/beta/pg-cluster.yaml
+++ b/Apps/chatapp/overlays/beta/pg-cluster.yaml
@@ -10,6 +10,6 @@ spec:
   monitoring:
     enablePodMonitor: true
   # for maintenance window
-  # nodeMaintenanceWindow:
-  #   inProgress: true
-  #   reusePVC: true
+  nodeMaintenanceWindow:
+    inProgress: true
+    reusePVC: true
