--- a/Apps/chatapp/overlays/beta/kustomization.yaml
+++ b/Apps/chatapp/overlays/beta/kustomization.yaml
@@ -8,7 +8,8 @@ resources:
   - namespace.yaml
   - pg-cluster.yaml
   - migration-job.yaml
-
+  - pg-backup-schedule.yaml
+  
 patches:
   - path: deployment-patch.yaml
 
