--- a/Apps/chatapp/overlays/beta/pg-cluster.yaml
+++ b/Apps/chatapp/overlays/beta/pg-cluster.yaml
@@ -15,7 +15,7 @@ spec:
     reusePVC: true
   backup:
     barmanObjectStore:
-      destinationPath: "https://kubernetesstorages.blob.core.windows.net/cnpg-backups/backups"
+      destinationPath: "https://kubernetesstorages.blob.core.windows.net/cnpg-backups"
       azureCredentials:
         storageAccount:
           name: azure-creds
