--- a/Apps/chatapp/overlays/beta/pg-backup-schedule.yaml
+++ b/Apps/chatapp/overlays/beta/pg-backup-schedule.yaml
@@ -1,7 +1,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: ScheduledBackup
 metadata:
-  name: cluster-backup
+  name: pg-backup-schedule
 spec:
   schedule: "0 */6 * * * *" 
   cluster:
