--- a/Apps/chatapp/overlays/beta/pg-backup-schedule.yaml
+++ b/Apps/chatapp/overlays/beta/pg-backup-schedule.yaml
@@ -3,6 +3,6 @@ kind: ScheduledBackup
 metadata:
   name: pg-backup-schedule
 spec:
-  schedule: "0 */6 * * * *" 
+  schedule: "0 */2 * * * *" 
   cluster:
-    name: pg-cluster
+    name: beta-pg-cluster
