set node number to 1

--- a/Apps/chatapp/overlays/beta/pg-cluster.yaml
+++ b/Apps/chatapp/overlays/beta/pg-cluster.yaml
@@ -11,7 +11,7 @@ spec:
     enablePodMonitor: true
   # for maintenance window
   nodeMaintenanceWindow:
-    inProgress: false
+    inProgress: true
     reusePVC: true
   backup:
     barmanObjectStore:
