--- a/Apps/chatapp/base/chatapp-hpa.yaml
+++ b/Apps/chatapp/base/chatapp-hpa.yaml
@@ -16,3 +16,7 @@ spec:
       target:
         type: Utilization
         averageUtilization: 50
+      name: memory
+      target:
+        type: Utilization
+        averageUtilization: 50
