--- a/Apps/chatapp/base/chatapp-hpa.yaml
+++ b/Apps/chatapp/base/chatapp-hpa.yaml
@@ -16,6 +16,8 @@ spec:
       target:
         type: Utilization
         averageUtilization: 50
+  - type: Resource
+    resource:
       name: memory
       target:
         type: Utilization
