add elasticsearch helm chart

--- a/Apps/chatapp/base/kustomization.yaml
+++ b/Apps/chatapp/base/kustomization.yaml
@@ -15,6 +15,6 @@ resources:
     version: 7.17.3
     repo: https://helm.elastic.co
     releaseName: elasticsearch
-    namespace: elasticsearch
+    namespace: monitoring
     valuesInline:
       replicas: 1
