add elasticsearch helm chart

--- a/Apps/monitoring/kustomization.yaml
+++ b/Apps/monitoring/kustomization.yaml
@@ -4,3 +4,12 @@ kind: Kustomization
 resources:
   - grafana-configmap.yaml
   - namespace.yaml
+
+helmCharts:
+- name: elasticsearch
+  version: 7.17.3
+  repo: https://helm.elastic.co
+  releaseName: elasticsearch
+  namespace: monitoring
+  valuesInline:
+    replicas: 1
