--- a/Apps/monitoring/elasticsearch.yaml
+++ b/Apps/monitoring/elasticsearch.yaml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: fluent-bit
+  name: elasticsearch
   namespace: argocd
 spec:
   project: default
   source:
-    chart: fluent-bit
-    repoURL: https://fluent.github.io/helm-charts
-    targetRevision: 0.48.9
+    chart: elasticsearch
+    repoURL: https://helm.elastic.co
+    targetRevision: 7.17.3
     helm:
-      releaseName: fluent-bit
+      releaseName: elasticsearch
       valueFiles:
-        - helm_values/fluentbit-values.yaml
+        - helm_values/elasticsearch_values.yaml
   destination:
     server: "https://kubernetes.default.svc"
     namespace: monitoring
