--- a/Apps/monitoring/kustomization.yaml
+++ b/Apps/monitoring/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
   - service_account.yaml
   - fluent-bit.yaml
   - elasticsearch.yaml
+  - helm_values/fluentbit-values.yaml
+  - helm_values/elasticsearch_values.yaml
