--- a/Apps/monitoring/fluent-bit.yaml
+++ b/Apps/monitoring/fluent-bit.yaml
@@ -12,7 +12,7 @@ spec:
     helm:
       releaseName: fluent-bit
       valueFiles:
-        - ../helm_values/fluentbit-values.yaml
+        - ./helm_values/fluentbit-values.yaml
   destination:
     server: "https://kubernetes.default.svc"
     namespace: monitoring
