--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -29,8 +29,8 @@ env:
   ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
   ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
   ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
-  GRAFANA_URL: "${{ secrets.GRAFANA_URL }}"
-  GRAFANA_AUTH: "${{ secrets.GRAFANA_AUTH }}"
+  TF_VAR_grafana_url: ${{ secrets.GRAFANA_URL }}
+  TF_VAR_grafana_auth: ${{ secrets.GRAFANA_AUTH }}
 jobs:
   deploy:
     runs-on: ubuntu-latest
