setup service monitor

--- a/Apps/chatapp/overlays/beta/pg-cluster.yaml
+++ b/Apps/chatapp/overlays/beta/pg-cluster.yaml
@@ -9,9 +9,12 @@ spec:
     size: 1Gi
   monitoring:
     enablePodMonitor: true
+  metrics:
+    enable: true
+    interval: 10s
   # for maintenance window
   nodeMaintenanceWindow:
-    inProgress: true
+    inProgress: false
     reusePVC: true
   backup:
     barmanObjectStore:
