setup monitoring pod

--- a/Apps/chatapp/overlays/beta/kustomization.yaml
+++ b/Apps/chatapp/overlays/beta/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - pg-cluster.yaml
   - migration-job.yaml
   - pg-backup-schedule.yaml
-  - cnpg-service-monitor.yaml
+  - cnpg-pod-monitor.yaml
 
 patches:
   - path: deployment-patch.yaml
