--- a/Apps/chatapp/overlays/beta/pg-cluster.yaml
+++ b/Apps/chatapp/overlays/beta/pg-cluster.yaml
@@ -7,8 +7,8 @@ spec:
   primaryUpdateStrategy: unsupervised
   storage:
     size: 1Gi
-  enableServiceMonitor: true
-  enablePodMonitor: true
+  monitoring:
+    enablePodMonitor: true
   metrics:
     enable: true
     interval: 10s
