--- a/Apps/chatapp/overlays/beta/pg-cluster.yaml
+++ b/Apps/chatapp/overlays/beta/pg-cluster.yaml
@@ -26,7 +26,7 @@ spec:
     reusePVC: true
   backup:
     barmanObjectStore:
-      destinationPath: "https://kubernetesstorage25.blob.core.windows.net/cnpg-backups/backups"
+      destinationPath: "https://kubestrg.blob.core.windows.net/cnpg-backups/backups"
       azureCredentials:
         storageAccount:
           name: azure-creds
