--- a/Argocd/chatapp/argocd-app-beta.yaml
+++ b/Argocd/chatapp/argocd-app-beta.yaml
@@ -4,8 +4,9 @@ metadata:
   name: chatapp-beta
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: chatapp-image=kyczak/chatapp:beta
+    argocd-image-updater.argoproj.io/image-list: chatapp-image=kyczak/chatapp:lastest
     argocd-image-updater.argoproj.io/chatapp-image.update-strategy: digest #update to latest image with declared tag
+    argocd-image-updater.argoproj.io/pullsecret: argocd/dockerhub-secret
     argocd-image-updater.argoproj.io/chatapp-image.force-update: "true"
     argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
     argocd-image-updater.argoproj.io/git-branch: master
