--- a/Argocd/chatapp/argocd-app-prod.yaml
+++ b/Argocd/chatapp/argocd-app-prod.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     argocd-image-updater.argoproj.io/image-list: chatapp-image=kyczak/chatapp:latest
     argocd-image-updater.argoproj.io/chatapp-image.update-strategy: digest
+    argocd-image-updater.argoproj.io/pullsecret: argocd/dockerhub-secret
     argocd-image-updater.argoproj.io/chatapp-image.force-update: "true"
     argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
     argocd-image-updater.argoproj.io/git-branch: master
