--- a/Apps/chatapp/overlays/prod/kustomization.yaml
+++ b/Apps/chatapp/overlays/prod/kustomization.yaml
@@ -6,6 +6,10 @@ namespace: prod
 resources:
   - ../../base
   - namespace.yaml
+  - pg-cluster.yaml
+  - migration-job.yaml
+  - pg-backup-schedule.yaml
+  
 patches:
   - path: deployment-patch.yaml
   
