update hpa config for both env

--- a/Apps/chatapp/overlays/prod/deployment-patch.yaml
+++ b/Apps/chatapp/overlays/prod/deployment-patch.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: chatapp
 spec:
-  replicas: 1
+
   template:
     spec:
       imagePullSecrets:
@@ -11,6 +11,13 @@ spec:
       containers:
         - name: chatapp
           image: kyczak/chatapp:latest
+          resources:
+            requests: 
+              cpu: "300m"
+              memory: "500Mi"
+            limits:
+              cpu: "500m"
+              memory: "700Mi"
           env:
           - name: DB_NAME
             valueFrom:
