--- a/Apps/chatapp/overlays/prod/deployment-patch.yaml
+++ b/Apps/chatapp/overlays/prod/deployment-patch.yaml
@@ -8,6 +8,9 @@ spec:
     spec:
       imagePullSecrets:
         - name: dockerhub-secret
+      nodeSelector:
+        nodepool-type: "spot"
+        workload: "infra"
       containers:
         - name: chatapp
           image: kyczak/chatapp:latest
@@ -17,7 +20,7 @@ spec:
               memory: "500Mi"
             limits:
               cpu: "500m"
-              memory: "700Mi"
+              memory: "700Mi"v
           env:
           - name: DB_NAME
             valueFrom:
