--- a/Apps/monitoring/kustomization.yaml
+++ b/Apps/monitoring/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
   - grafana-configmap.yaml
   - namespace.yaml
   - service_account.yaml
-  # - loki-stack.yaml
-  - elasticsearch.yaml      
-  - grafana.yaml
-  - fluent-bit.yaml    
-  - prometheus.yaml
+  # - elasticsearch.yaml      
+  # - grafana.yaml
+  # - fluent-bit.yaml    
+  # - prometheus.yaml
+  - loki-stack.yaml
