update ingress route

--- a/Apps/chatapp/overlays/beta/ingressroute.yaml
+++ b/Apps/chatapp/overlays/beta/ingressroute.yaml
@@ -9,5 +9,7 @@ spec:
     - match: Host('localhost')
       kind: Rule
       services:
-        - name: beta-chatapp-svc
+        - kind: Service
+          name: beta-chatapp-svc
+          namespace: beta
           port: 80
