--- a/Apps/chatapp/overlays/beta/ingressroute.yaml
+++ b/Apps/chatapp/overlays/beta/ingressroute.yaml
@@ -6,7 +6,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host('localhost')
+    - match: Host(`localhost`)
       kind: Rule
       services:
         - kind: Service
