--- a/Apps/chatapp/base/chatapp-svc.yaml
+++ b/Apps/chatapp/base/chatapp-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: chatapp-svc-http
+  name: chatapp-svc
   labels:
     app: chat
 spec:
@@ -9,5 +9,5 @@ spec:
   selector:
     app: chat
   ports:
-    - port: 80
+    - port: 8000
       targetPort: 8000
