--- a/Apps/chatapp/base/chatapp-deployment.yaml
+++ b/Apps/chatapp/base/chatapp-deployment.yaml
@@ -4,8 +4,9 @@ metadata:
   name: chatapp
   labels:
     app: chat
-spec: 
+spec:
   replicas: 1
+  revisionHistoryLimit: 2
   selector:
     matchLabels:
       app: chat
